fix(circle-ci): set environment var to build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,9 @@ jobs:
     docker:
       # specify the version
       - image: circleci/golang:1.9
+    environment:
+      ORG_NAME: rhuret
+      REPO_NAME: go-hello-world
 
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
