fix(circle-ci): set org name et repo name into the working dir

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,10 +7,7 @@ jobs:
     docker:
       # specify the version
       - image: circleci/golang:1.9
-    environment:
-      ORG_NAME: rhuret
-      REPO_NAME: go-hello-world
-
+      
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
@@ -20,7 +17,7 @@ jobs:
     #### expecting it in the form of
     ####   /go/src/github.com/circleci/go-tool
     ####   /go/src/bitbucket.org/circleci/go-tool
-    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
+    working_directory: /go/src/github.com/rhuret/go-hello-world
     steps:
       - checkout
 
